# tlab-google

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/: conftest.py
src/tlab_google/: __init__.py  abstract.py  credentials.py  gmail.py  utils.py
tests/: conftest.py  test_credentials.py  test_gmail.py  test_utils.py
