[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tlab-google"
description = "Goolge API Wrapper for Takeuchi Lab"
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
keywords = []
classifiers = []
dependencies = [
  "google-auth~=2.11.0",
  "google-auth-oauthlib~=0.7.1",
  "google-api-python-client~=2.58.0",
]
dynamic = ["version"]

[project.urls]
Documentation = ""
Homepage = "https://github.com/wasedatakeuchilab/tlab-google"

[project.optional-dependencies]
test = [
  "pytest~=7.1.3",
  "pytest-cov~=3.0.0",
  "pytest-describe~=2.0.1",
  "mypy~=0.971",
  "flake8~=5.0.4",
  "isort~=5.10.1",
  "black~=22.8.0",
]
dev = [
  "pre-commit~=2.20.0",
]
doc = []

[tool.hatch.version]
path = "src/tlab_google/__init__.py"

[tool.hatch.build]
exclude = ["conftest.py"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = [
  "google.*",
  "google_auth_oauthlib.*",
  "googleapiclient.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=tlab_google"
testpaths = ["tests"]
